update the client controller , working with user detail service instide of user entity